fixing white space

--- a/react-app/src/components/Bookings/Bookings.css
+++ b/react-app/src/components/Bookings/Bookings.css
@@ -62,3 +62,14 @@
 .cncltrip{
     
 }
+
+.no-bookings{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    margin-top: 150px;
+    border-bottom: 1px solid #DDDDDD;
+    padding-bottom: 150px;
+}
